# CodeInsight

./: .gitignore  Makefile  README.md  package.json
client/: cli.py  cli.ts  package.json  tsconfig.json
client/web/: app.py  app.ts
client/web/ui/: index.html
examples/: queries.md
mcp/: server.py
rag/: callgraph.py  chunking.py  config.yaml  indexer.py  llm.py  pyproject.toml  query.py  requirements.txt  retriever.py  symbols.py
